--- a/Teleopti.Analytics/WebPortal/Teleopti.Analytics.Portal/ReportTexts/Resources.fr.resx
+++ b/Teleopti.Analytics/WebPortal/Teleopti.Analytics.Portal/ReportTexts/Resources.fr.resx
@@ -352,10 +352,10 @@
     <value>Absence:</value>
   </data>
   <data name="ResReportShiftCategoryPerDay" xml:space="preserve">
-    <value>Catégorie de Roulement par Jour</value>
+    <value>Catégorie d'Horaires par Jour</value>
   </data>
   <data name="ResShiftCategoryColon" xml:space="preserve">
-    <value>Catégorie de Roulement:</value>
+    <value>Catégorie d'Horaire:</value>
   </data>
   <data name="ResDayOffColon" xml:space="preserve">
     <value>Jour Libre:</value>
@@ -484,10 +484,10 @@
     <value>Samedi</value>
   </data>
   <data name="ResShiftCategory" xml:space="preserve">
-    <value>Catégorie de Roulement</value>
+    <value>Catégorie d'Horaire</value>
   </data>
   <data name="ResShiftStartTime" xml:space="preserve">
-    <value>Heure de début de roulement</value>
+    <value>Heure de début d'horaire</value>
   </data>
   <data name="ResSunday" xml:space="preserve">
     <value>Dimanche</value>
@@ -532,7 +532,7 @@
     <value>Pourcentages Temps Partiel</value>
   </data>
   <data name="RuleSetBag" xml:space="preserve">
-    <value>Banque de Roulements</value>
+    <value>Banque d'Horaire</value>
   </data>
   <data name="ResGroupPageColon" xml:space="preserve">
     <value>Page de Groupe:</value>
@@ -571,7 +571,7 @@
     <value>Heures supplémentaires (hh:mm)</value>
   </data>
   <data name="ResShiftEndTime" xml:space="preserve">
-    <value>Heure de fin de roulement</value>
+    <value>Heure de fin d'horaire</value>
   </data>
   <data name="ResForecastedACW" xml:space="preserve">
     <value>TPA Prévu</value>
@@ -766,10 +766,10 @@
     <value>Temps Ready contre Temps Ready planifié</value>
   </data>
   <data name="ResReadyTimeVsScheduledTime" xml:space="preserve">
-    <value>Temps Ready contre Temps Planifié (incluant période avant et après début de roulement)</value>
+    <value>Temps Ready contre Temps Planifié (incluant période avant et après début d'horaire)</value>
   </data>
   <data name="ResReportShiftCategoryAndDayAbsencePerDay" xml:space="preserve">
-    <value>Catégorie de Roulement et Absence Journée Entière par Jour </value>
+    <value>Catégorie d'Horaire et Absence Journée Entière par Jour </value>
   </data>
   <data name="ResAbandonedCalls" xml:space="preserve">
     <value>Appels Abandonnés</value>
@@ -850,7 +850,7 @@
     <value>Différence relative incl. Réduction (%)</value>
   </data>
   <data name="ResReportShiftCategoryAndDayAbsencePerAgent" xml:space="preserve">
-    <value>Catégorie deRoulement et Absence Journée Entière par Agent</value>
+    <value>Catégorie d'Horaire et Absence Journée Entière par Agent</value>
   </data>
   <data name="ResReportImprove" xml:space="preserve">
     <value>IMPROVE</value>
@@ -913,7 +913,7 @@
     <value>Absence</value>
   </data>
   <data name="ResRequestTypeShiftTrade" xml:space="preserve">
-    <value>Echange de roulement</value>
+    <value>Echange d'horaire</value>
   </data>
   <data name="ResRequestTypeText" xml:space="preserve">
     <value>Texte</value>
