--- a/Teleopti.Ccc.UserTexts/Resources.zh-CN.resx
+++ b/Teleopti.Ccc.UserTexts/Resources.zh-CN.resx
@@ -9218,4 +9218,8 @@ Periods</comment>
   <data name="ActivityCanNotBeEmptyDot" xml:space="preserve">
     <value>活动设置不能为空</value>
   </data>
+  <data name="StartTimeShouldBeEarlierThanEndTimeDot" xml:space="preserve">
+    <value>起始时间{0}必须早于结束时间{1}.</value>
+    <comment>Start time 19:00 should be earlier than end time 18:00.</comment>
+  </data>
 </root>
