--- a/Win/Scheduling/OptimizeActivities.resx
+++ b/Win/Scheduling/OptimizeActivities.resx
@@ -117,4 +117,22 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="fromToTimePicker1.MinMaxEndTime" mimetype="application/x-microsoft.net.object.binary.base64">
+    <value>
+        AAEAAAD/////AQAAAAAAAAAMAgAAAFZUZWxlb3B0aS5JbnRlcmZhY2VzLCBWZXJzaW9uPTEuMC4wLjAs
+        IEN1bHR1cmU9bmV1dHJhbCwgUHVibGljS2V5VG9rZW49OWU3OTMyY2RiYjM5YzQ1ZgUBAAAAgwFUZWxl
+        b3B0aS5JbnRlcmZhY2VzLkRvbWFpbi5NaW5NYXhgMVtbU3lzdGVtLlRpbWVTcGFuLCBtc2NvcmxpYiwg
+        VmVyc2lvbj00LjAuMC4wLCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkz
+        NGUwODldXQIAAAAIX21pbmltdW0IX21heGltdW0AAAwMAgAAAAAAAAAAAAAAAIDTVJIBAAAL
+</value>
+  </data>
+  <data name="fromToTimePicker1.MinMaxStartTime" mimetype="application/x-microsoft.net.object.binary.base64">
+    <value>
+        AAEAAAD/////AQAAAAAAAAAMAgAAAFZUZWxlb3B0aS5JbnRlcmZhY2VzLCBWZXJzaW9uPTEuMC4wLjAs
+        IEN1bHR1cmU9bmV1dHJhbCwgUHVibGljS2V5VG9rZW49OWU3OTMyY2RiYjM5YzQ1ZgUBAAAAgwFUZWxl
+        b3B0aS5JbnRlcmZhY2VzLkRvbWFpbi5NaW5NYXhgMVtbU3lzdGVtLlRpbWVTcGFuLCBtc2NvcmxpYiwg
+        VmVyc2lvbj00LjAuMC4wLCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkz
+        NGUwODldXQIAAAAIX21pbmltdW0IX21heGltdW0AAAwMAgAAAAAAAAAAAAAAAIDTVJIBAAAL
+</value>
+  </data>
 </root>
