--- a/Teleopti.Ccc.UserTexts/Resources.resx
+++ b/Teleopti.Ccc.UserTexts/Resources.resx
@@ -112,10 +112,10 @@
     <value>2.0</value>
   </resheader>
   <resheader name="reader">
-    <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <resheader name="writer">
-    <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="MaskedEditTextBox" xml:space="preserve">
     <value>Masked Edit Text Box</value>
@@ -10658,27 +10658,23 @@ These options are activated:
     <value>External resource is using by another program, please try again later.</value>
     <comment>External resource is using by another program, please try again later.</comment>
   </data>
-  <data name="ExternalResourceInUse" xml:space="preserve">
-    <value>External resource in use</value>
-    <comment>External resource in use</comment>
-  </data>
-  <data name="ExternalResourceIsUsingByAnotherProgramCommaPleaseTryAgainLaterDot" xml:space="preserve">
-    <value>External resource is using by another program, please try again later.</value>
-    <comment>External resource is using by another program, please try again later.</comment>
-  </data>
   <data name="ImportForecastFromFile" xml:space="preserve">
     <value>Import forecast from file</value>
-    <comment>Import forecast from file</comment>  
+    <comment>Import forecast from file</comment>
   </data>
   <data name="RequestAllowances" xml:space="preserve">
     <value>Request allowances</value>
     <comment>Request allowances</comment>
   </data>
   <data name="ShowOnlyAvailableForShiftTrade" xml:space="preserve">
-    <value>Show only available for shift trade</value>  
+    <value>Show only available for shift trade</value>
   </data>
   <data name="StartTimeShouldBeEarlierThanEndTimeDot" xml:space="preserve">
     <value>Start time {0} should be earlier than end time {1}.</value>
     <comment>Start time 19:00 should be earlier than end time 18:00.</comment>
+  </data>
+  <data name="DuplicateDaysOffValidationError" xml:space="preserve">
+    <value>Duplicate day offs on {0}</value>
+    <comment>This error message is to show duplicate day offs on same day</comment>
   </data>
 </root>
