--- a/Teleopti.Ccc.UserTexts/Resources.resx
+++ b/Teleopti.Ccc.UserTexts/Resources.resx
@@ -10642,4 +10642,8 @@ These options are activated:
     <value>Duplicate day offs on {0}</value>
     <comment>This error message will be shown when there are two days off at the same day.</comment>
   </data>
+  <data name="TheIntervalLengthOfThisSubskillShouldBeTheSameAsItsParentSkillCommaWhichIsParameterMinutesDot" xml:space="preserve">
+    <value>The interval length of this subskill should be the same as its parent skill, which is {0} minutes.</value>
+    <comment>The interval length of this subskill should be the same as its parent skill, which is 15 minutes.</comment>
+  </data>
 </root>
