19268 "Mutisite skill icon is inconsistent."
--HG--
branch : Release 7.1.358

--- a/Win/Forecasting/Forms/ForecasterNavigator.resx
+++ b/Win/Forecasting/Forms/ForecasterNavigator.resx
@@ -127,8 +127,8 @@
     <value>
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
-        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAACM
-        EAAAAk1TRnQBSQFMAgEBCQEAAQwBAQEMAQEBEAEAARABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAACc
+        EQAAAk1TRnQBSQFMAgEBCgEAARQBAQEUAQEBEAEAARABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
         AwABQAMAATADAAEBAQABCAYAAQwYAAGAAgABgAMAAoABAAGAAwABgAEAAYABAAKAAgADwAEAAcAB3AHA
         AQAB8AHKAaYBAAEzBQABMwEAATMBAAEzAQACMwIAAxYBAAMcAQADIgEAAykBAANVAQADTQEAA0IBAAM5
         AQABgAF8Af8BAAJQAf8BAAGTAQAB1gEAAf8B7AHMAQABxgHWAe8BAAHWAucBAAGQAakBrQIAAf8BMwMA
@@ -157,48 +157,53 @@
         AQABzAH/AWYBAAL/AZkBAAL/AcwBAAJmAf8BAAFmAf8BZgEAAWYC/wEAAf8CZgEAAf8BZgH/AQAC/wFm
         AQABIQEAAaUBAANfAQADdwEAA4YBAAOWAQADywEAA7IBAAPXAQAD3QEAA+MBAAPqAQAD8QEAA/gBAAHw
         AfsB/wEAAaQCoAEAA4ADAAH/AgAB/wMAAv8BAAH/AwAB/wEAAf8BAAL/AgAD/wEADmYyAAHtAe8B9AT/
-        AfQC8wLxAbwBBwFmMQAB7QH0AaYCQwEHASkBIgFDAfcBJAMjAQcBZjAAAe0B/wGmAq0BQwEpATgBMQFD
-        ASQBJQIkASMBZjAAAe0B/wGmAdUBswGtAUoCOAExAUUBRgElASQBIzEAAe0B/wGGAtUBrQFLAVkBOAEx
-        AUUBTAFGASUBIzEAAe0B/wGGAdYB1QG0AUsCWQExAUUCTAFGASMxAAHtAfQBiwGtArQBSwF6AVkBUgFF
-        AuMBTAEjMQAB7QHzAa0B9AEZAd0BSwJ6AVIBSwF1ARYBTAEjMQAB7QHzAQkDtAFRApoBeQFLAZQBdQFv
-        ASMxAAHtAfEB8gFmAgABUQHDAaABeQFLAW4BdAFvASMxAAHtAvEBZgIAAXMCwwGZAUsBbgEbAb0BIzEA
-        Aa4BBwHwAWYCAAJzARwBmQFKAacDbjEAAc8BkQG8AWYCAAFzAvYBwwFKNgABzwGRAWYCAAGGBHM3AAHP
-        AYtDAAHxAfcNAAH0Ae8BkgG8DQAB8QH3HQABvAPsCwAB9wIHAu8B9wHwCgABvAPsDQAB/wH3AfEB/wsA
-        AewB7wH0Ae8KAAHvAQcB8AHxAZIBBwLvAfAJAAHsAe8B9AHvCwAB/wG1AfABrgG1AbwBtQHtAe8B8wcA
-        AewB7wH0Ae8JAAEHAfIB9AHzAfIB8QLwAu8JAAHsAe8B9AHvCgABvAHyAbQB8AGuAbUBvAHvAq4B8wcA
-        AuwBvAHsAf8IAAEHAfAB8QH/AfQB8wHyAe8BvAEHAfEIAALsAbwB7AH/BwAB8wHwAQcB8gG0AfABrgG1
-        AbwB7wKuAfMHAAHwAfEB8AHzAe8IAAHyAfQB8QL/AeoB8wHyAgcB9wgAAfAB8QHwAfMB7wYAAf8BvAHw
-        AQcB8gG0AfABrgG1AbwB7wKuAfMGAAEHAfQB8QLzAbwB9AcAAfIB9AL/AfMB7AH/AfIB8wG8Ae8HAAEH
-        AfQB8QLzAbwB9AUAAf8CvAEHAfIBtAHwAbUBBwG8Ae8CrgHzBQABkgH0AfMB8QH0AfEB9AHxAfMGAAEH
-        AbwB8AL/Ae8B9AL/AfEB8gYAAZIB9AHzAfEB9AHxAfQB8QHzBAAB/wK8AQcB8gG1Af8B9AHzAfIBBwK1
-        AfEEAAPzAfEC8wHwAvMB9wYAAfEB8wP/AbwC/wIHBgAD8wHxAvMB8ALzAfcEAAH/ArwBtQHxA/8B9ALz
-        AfABtQUAAe8C8wHyA/QC8wG8BwAB9wHzAfQB/wHxAf8BvAHxAfMGAAHvAvMB8gP0AvMBvAQAAf8CvAb/
-        AfMBtAH/BgAB7QLzAvYB/wH2AfQB8wHxBgAB7wHrAfAB8QPzAe8B/wcAAe0C8wL2Af8B9gH0AfMB8QQA
-        AfQBvAG1AbwE/wG0Af8IAAEHBPMB9APzAQcHAAH/AgABkgHvAfIJAAEHBPMB9APzAQcJAAHwAbUB9AoA
-        Af8BvAHzAvQB8wL0AfEB7QkAAvEBEgHxCQAB/wG8AfMC9AHzAvQB8QHtFwABvAHwAfMC/wH0AfEB9woA
-        AfICAAG8CgABvAHwAfMC/wH0AfEB9xkAAfIB9wK8AQcB7wwAAbwB7wH/CwAB8gH3ArwBBwHvmAAB9AJt
-        LgAB7AEHBu8B7AHrAf8DAAG8AewBrgGLAesdAAHtAm0NAAHsAZkCBwIcAQcBmQPsAgAB/wG1AbQBCQGu
-        AYsB6woAAbQC8wHyA/EF8AUAAq4C6gRtCQAB7QEHAZkBHAESARwCmQHsARwB7AMAAe8B7QK1AfABiwHr
-        CQABtAEHAvQC8wHyBPEBBwQAAa4BtQHzApIBrgFmAuoCbQcAAe0B7wKZAQcDmQHsAZkB7QMAAfEBBwEJ
-        AfEB9AG1AYsB6ggAAbQB/wG1BPQC8wHxAfAB8gMAAa4BtQHzAZIBtQGSAf8B8wG1Aa4CZgFtAwAB7AeZ
-        AesC7AFtAe8BHAUAAbwB8QEJAfEBtQGLAbwHAAG0Av8BBwH/AQcBvAH0AfAD8wMAAbUB8wK1Af8B7wG1
-        Ae8CtQHzAbUB6gMAAewBGgIIApkBCAGZAesBmQHsARIB7wEcBgAB8QH/AQkB3QH3Aa4B9AYAAbQD/wG1
-        Av8B8gH0Af8C9AIAAZEB8wG1AZEC8wGSAbUB7wGSAbUCdQHqAwAB7QIaAZkBEgGZARoBCAHrApkB7AHv
-        ARwHAAG8Af8B3QHwAZEB7AYAAbQC/wG1BP8C9AL/AgABkQG1Aa4BtQHzAZEF7wG1Aa4B7QMAAe0BGwIa
-        Af8DGgHrApkB7AHvARwIAAHvAf8B9AGRAYsBbQUAAbQB/wEHB/8B8gH/AgABrgGRArUBkgOzAZEDkgGu
-        BAABHAYbARoB7AEcAZkB7AHvARwJAAHrAQkBtQGuAYsB8AQAAbQBBwn/AfADAAKSAa4C6gOzApEBrgUA
-        Bu8CHAHsAVIC7AHvARwJAAHyAbsBtQG8Aa4B7AQADLQDAAHvA/8B8wG1AZIB6gGuAZEJAAV5AXQBUgFR
-        AesBBwEcCQAB/wG7A7UB9xMAAbUG/wHtCwABHALvAfcDkgHsAesBvAGZCgABBwG7AbUB7xQAAe8BtQPz
-        Af8B8wHvDAABBwcbAcMBvAsAAQcB8RYAAbUBkgGRAe0C71gAAUIBTQE+BwABPgMAASgDAAFAAwABMAMA
-        AQEBAAEBBQABgAEBFgAD/wIAAQMHAAEBFwABAQcAAQEHAAEBBwABAQcAAQEHAAEBBgABDAEBBgABDAEB
-        BgABDAEBBgABDAEfBgABjAEfBgABzwH/BgAB/gF/AfwBPwH+AX8C/wH8AT8B+AEPAfwBPwH+AR8B/AE/
-        AfABBwH8AT8B+AEBAfwBPwHgAQcB/AE/AfABAQH8AR8B4AEDAfwBHwHAAQEB/AEfAeABAwH8AR8BgAEB
-        AfgBDwHgAQMB+AEPAYABAQHwAQcB4AEDAfABBwGAAQEB4AEHAeABBwHgAQcBgAEDAeABBwHwAQcB4AEH
-        AYABBwHgAQcB4AEPAeABBwGAAR8B4AEHAfYBPwHgAQcB/AF/AeABBwH8AT8B4AEHAv8B8AEPAf0BvwHw
-        AQ8C/wH4AR8B/gE/AfgBHxL/AeMF/wHwAQEBwQP/AfEB/wHwAQEBgAH/AcABAwHgAR8B8AEBAcABfwHA
-        AQMBwAEHAfABAQHAAT8BwAEDAYABAwGAAQEB8AEfAcABAwGAAQMBgAEBAfgBDwHAAQMBAAEDAYABAQH8
-        AQ8BwAEDAQABAwGAAQEB/gEHAcABAwEAAQcBgAEBAf8BAwHAAQMBgAEPAYABAQH/AQMBwAEDAYABHwHw
-        AQEB/wEDAv8BgAF/AfABAQH/AYcC/wGAAX8B+AEBAf8BzwL/AcAL/ws=
+        AfQC8wLxAbwBBwFmBwAB/wMAAf8lAAHtAfQBpgJDAQcBKQEiAUMB9wEkAyMBBwFmBQABcwGZAXMBAAFz
+        AQABcyQAAe0B/wGmAq0BQwEpATgBMQFDASQBJQIkASMBZgQAAXMBmgKZAUsDAAFKIwAB7QH/AaYB1QGz
+        Aa0BSgI4ATEBRQFGASUBJAEjBQABcwOaAW4DAAFKIwAB7QH/AYYC1QGtAUsBWQE4ATEBRQFMAUYBJQEj
+        BAAB/wFzA5oBbgMAAUoB/yIAAe0B/wGGAdYB1QG0AUsCWQExAUUCTAFGASMDAAKZAQABmQEcAXQBWAFS
+        AXMCmQF5ARwhAAHtAfQBiwGtArQBSwF6AVkBUgFFAuMBTAEjAwABcwMAAXMDWAFzApoBmQFuIQAB7QHz
+        Aa0B9AEZAd0BSwJ6AVIBSwF1ARYBTAEjAwABcwMAAXMCeQFYAXMDmgFuIQAB7QHzAQkDtAFRApoBeQFL
+        AZQBdQFvASMEAAEcAQABHAEaARwBeQEcAQABHAGZAXMiAAHtAfEB8gFmAgABUQHDAaABeQFLAW4BdAFv
+        ASMFAAEcAcMCGgFzAwABcyMAAe0C8QFmAgABcwLDAZkBSwFuARsBvQEjBQABHAPDARwDAAFzIwABrgEH
+        AfABZgIAAnMBHAGZAUoBpwNuBQABBwEaAcMBGgEcARoBAAEaAZkjAAHPAZEBvAFmAgABcwL2AcMBSgoA
+        Af8BHAH/AQAB/wEcAf8lAAHPAZEBZgIAAYYEczcAAc8Bi0MAAfEB9w0AAfQB7wGSAbwNAAHxAfcdAAG8
+        A+wLAAH3AgcC7wH3AfAKAAG8A+wNAAH/AfcB8QH/CwAB7AHvAfQB7woAAe8BBwHwAfEBkgEHAu8B8AkA
+        AewB7wH0Ae8LAAH/AbUB8AGuAbUBvAG1Ae0B7wHzBwAB7AHvAfQB7wkAAQcB8gH0AfMB8gHxAvAC7wkA
+        AewB7wH0Ae8KAAG8AfIBtAHwAa4BtQG8Ae8CrgHzBwAC7AG8AewB/wgAAQcB8AHxAf8B9AHzAfIB7wG8
+        AQcB8QgAAuwBvAHsAf8HAAHzAfABBwHyAbQB8AGuAbUBvAHvAq4B8wcAAfAB8QHwAfMB7wgAAfIB9AHx
+        Av8B6gHzAfICBwH3CAAB8AHxAfAB8wHvBgAB/wG8AfABBwHyAbQB8AGuAbUBvAHvAq4B8wYAAQcB9AHx
+        AvMBvAH0BwAB8gH0Av8B8wHsAf8B8gHzAbwB7wcAAQcB9AHxAvMBvAH0BQAB/wK8AQcB8gG0AfABtQEH
+        AbwB7wKuAfMFAAGSAfQB8wHxAfQB8QH0AfEB8wYAAQcBvAHwAv8B7wH0Av8B8QHyBgABkgH0AfMB8QH0
+        AfEB9AHxAfMEAAH/ArwBBwHyAbUB/wH0AfMB8gEHArUB8QQAA/MB8QLzAfAC8wH3BgAB8QHzA/8BvAL/
+        AgcGAAPzAfEC8wHwAvMB9wQAAf8CvAG1AfED/wH0AvMB8AG1BQAB7wLzAfID9ALzAbwHAAH3AfMB9AH/
+        AfEB/wG8AfEB8wYAAe8C8wHyA/QC8wG8BAAB/wK8Bv8B8wG0Af8GAAHtAvMC9gH/AfYB9AHzAfEGAAHv
+        AesB8AHxA/MB7wH/BwAB7QLzAvYB/wH2AfQB8wHxBAAB9AG8AbUBvAT/AbQB/wgAAQcE8wH0A/MBBwcA
+        Af8CAAGSAe8B8gkAAQcE8wH0A/MBBwkAAfABtQH0CgAB/wG8AfMC9AHzAvQB8QHtCQAC8QESAfEJAAH/
+        AbwB8wL0AfMC9AHxAe0XAAG8AfAB8wL/AfQB8QH3CgAB8gIAAbwKAAG8AfAB8wL/AfQB8QH3GQAB8gH3
+        ArwBBwHvDAABvAHvAf8LAAHyAfcCvAEHAe+YAAH0Am0uAAHsAQcG7wHsAesB/wMAAbwB7AGuAYsB6x0A
+        Ae0CbQ0AAewBmQIHAhwBBwGZA+wCAAH/AbUBtAEJAa4BiwHrCgABtALzAfID8QXwBQACrgLqBG0JAAHt
+        AQcBmQEcARIBHAKZAewBHAHsAwAB7wHtArUB8AGLAesJAAG0AQcC9ALzAfIE8QEHBAABrgG1AfMCkgGu
+        AWYC6gJtBwAB7QHvApkBBwOZAewBmQHtAwAB8QEHAQkB8QH0AbUBiwHqCAABtAH/AbUE9ALzAfEB8AHy
+        AwABrgG1AfMBkgG1AZIB/wHzAbUBrgJmAW0DAAHsB5kB6wLsAW0B7wEcBQABvAHxAQkB8QG1AYsBvAcA
+        AbQC/wEHAf8BBwG8AfQB8APzAwABtQHzArUB/wHvAbUB7wK1AfMBtQHqAwAB7AEaAggCmQEIAZkB6wGZ
+        AewBEgHvARwGAAHxAf8BCQHdAfcBrgH0BgABtAP/AbUC/wHyAfQB/wL0AgABkQHzAbUBkQLzAZIBtQHv
+        AZIBtQJ1AeoDAAHtAhoBmQESAZkBGgEIAesCmQHsAe8BHAcAAbwB/wHdAfABkQHsBgABtAL/AbUE/wL0
+        Av8CAAGRAbUBrgG1AfMBkQXvAbUBrgHtAwAB7QEbAhoB/wMaAesCmQHsAe8BHAgAAe8B/wH0AZEBiwFt
+        BQABtAH/AQcH/wHyAf8CAAGuAZECtQGSA7MBkQOSAa4EAAEcBhsBGgHsARwBmQHsAe8BHAkAAesBCQG1
+        Aa4BiwHwBAABtAEHCf8B8AMAApIBrgLqA7MCkQGuBQAG7wIcAewBUgLsAe8BHAkAAfIBuwG1AbwBrgHs
+        BAAMtAMAAe8D/wHzAbUBkgHqAa4BkQkABXkBdAFSAVEB6wEHARwJAAH/AbsDtQH3EwABtQb/Ae0LAAEc
+        Au8B9wOSAewB6wG8AZkKAAEHAbsBtQHvFAAB7wG1A/MB/wHzAe8MAAEHBxsBwwG8CwABBwHxFgABtQGS
+        AZEB7QLvWAABQgFNAT4HAAE+AwABKAMAAUADAAEwAwABAQEAAQEFAAGAAQEWAAP/AgABAwL/BQABAQH9
+        Ad8GAAH4Aa8GAAHwAXcFAAEBAfABdwUAAQEB4AFzBQABAQHIAQEFAAEBAdwBAQUAAQEB3AEBBQABAQHo
+        ASMEAAEMAQEB8AF3BAABDAEBAfABdwQAAQwBAQHwAScEAAEMAR8B+AGPBAABjAEfAv8EAAHPA/8EAAH+
+        AX8B/AE/Af4BfwL/AfwBPwH4AQ8B/AE/Af4BHwH8AT8B8AEHAfwBPwH4AQEB/AE/AeABBwH8AT8B8AEB
+        AfwBHwHgAQMB/AEfAcABAQH8AR8B4AEDAfwBHwGAAQEB+AEPAeABAwH4AQ8BgAEBAfABBwHgAQMB8AEH
+        AYABAQHgAQcB4AEHAeABBwGAAQMB4AEHAfABBwHgAQcBgAEHAeABBwHgAQ8B4AEHAYABHwHgAQcB9gE/
+        AeABBwH8AX8B4AEHAfwBPwHgAQcC/wHwAQ8B/QG/AfABDwL/AfgBHwH+AT8B+AEfEv8B4wX/AfABAQHB
+        A/8B8QH/AfABAQGAAf8BwAEDAeABHwHwAQEBwAF/AcABAwHAAQcB8AEBAcABPwHAAQMBgAEDAYABAQHw
+        AR8BwAEDAYABAwGAAQEB+AEPAcABAwEAAQMBgAEBAfwBDwHAAQMBAAEDAYABAQH+AQcBwAEDAQABBwGA
+        AQEB/wEDAcABAwGAAQ8BgAEBAf8BAwHAAQMBgAEfAfABAQH/AQMC/wGAAX8B8AEBAf8BhwL/AYABfwH4
+        AQEB/wHPAv8BwAv/Cw==
 </value>
   </data>
   <metadata name="contextMenuStripSkills.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=2.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
