Next scenario failing for the right reason

--- a/Teleopti.Ccc.UserTexts/Resources.resx
+++ b/Teleopti.Ccc.UserTexts/Resources.resx
@@ -10690,4 +10690,8 @@ These options are activated:
     <value>You should have {0} days off.</value>
     <comment>You should have X days off.</comment>
   </data>
+  <data name="YouShouldHaveBetweenXAndYDaysOff" xml:space="preserve">
+    <value>You should have between {0} and {1} days off.</value>
+    <comment>You should have between X and Y days off.</comment>
+  </data>
 </root>
